RESOLVED FIXED181163
REGRESSION(r226269): 60 JSC test failures on ARMv7
https://bugs.webkit.org/show_bug.cgi?id=181163
Summary REGRESSION(r226269): 60 JSC test failures on ARMv7
Zan Dobersek
Reported 2017-12-26 09:06:31 PST
REGRESSION(r226269): 60 JSC test failures on ARMv7
Attachments
Patch (1.85 KB, patch)
2017-12-26 09:12 PST, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2017-12-26 09:12:09 PST
Yusuke Suzuki
Comment 2 2017-12-26 09:17:49 PST
Comment on attachment 330197 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=330197&action=review Oops, right. Thank you. > Source/JavaScriptCore/dfg/DFGSpeculativeJIT32_64.cpp:4896 > + JSValueRegsTemporary result(this); Right. Previous code uses GPRTemporary, not GPRFlushedCallResult.
WebKit Commit Bot
Comment 3 2017-12-26 10:54:41 PST
Comment on attachment 330197 [details] Patch Clearing flags on attachment: 330197 Committed r226294: <https://trac.webkit.org/changeset/226294>
WebKit Commit Bot
Comment 4 2017-12-26 10:54:43 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-01-02 13:17:55 PST
Note You need to log in before you can comment on or make changes to this bug.